# nyoom.nvim

./: .busted  .gitignore  .hotpot.lua  .hotpot.lua-temp  .luarc.json  Makefile  README.norg  flake.nix  index.norg  init.fnl  init.lua  justfile  lazy-lock.json  nyoom-hermit-scm-1.rockspec  result  rocks.toml  start.txt
after/queries/fennel/: highlights.scm  injections.scm
after/queries/haskell/: highlights.scm
after/queries/lua/: injection.scm
after/queries/nix/: highlights.scm
after/queries/norg/: folds.scm
docs/: faq.md  modules.md
docs/norg/: contributing.norg  examples.norg  faq.norg  getting_started.norg  modules.norg
fnl/: config.fnl  macros.fnl  modules.fnl  packages.fnl  util.fnl
fnl/core/: doctor.fnl  init.fnl  repl.fnl
fnl/doctor/: ffi.fnl  nix.fnl
fnl/ftplugin/: c3.fnl  norg.fnl  rust.fnl  typst.fnl  zig.fnl
fnl/util/: README.norg  _module.fnl  color.fnl  flash.fnl  hydra.fnl  lazn.fnl  lazy.fnl  lsp.fnl  macros.fnl  norg.fnl  octo.fnl  overseer.fnl  walk.fnl
ftplugin/: norg.lua  typst.lua
lua/: tangerine_vimrc.lua
lua/doctor/: ffi.lua  nix.lua
lua/ftplugin/: c3.lua  norg.lua  rust.lua  typst.lua  zig.lua
nix/: README.norg  default.nix  hermitM.nix  utils.nix
nix/apps/: default.nix
nix/flake-modules/: default.nix  mkNeovim.nix  mkPlugin.nix  mkSettings.nix  mkTypes.nix  mkWrapper.nix  mklib.nix
nix/modules/: default.nix  mkPlugin.nix  mklib.nix
nix/ncl/: README.norg  project.ncl
nix/overlay/: README.norg  default.nix
nix/templates/: README.norg  default.nix
nix/templates/CDev/: flake.nix  justfile  meson.build
nix/templates/haskellDev/: Project.cabal  README.norg  flake.nix  justfile
nix/tests/: busted.nix  default.nix  docs.nix  evalModule.nix  hercule.nix
plugin/: init.lua
snippets/cpp/: cpp.lua
snippets/fennel/: fennel.lua  python.lua
snippets/java/: java.lua
snippets/norg/: norg.lua
snippets/python/: generated.lua  python.lua
snippets/tex/: tex.lua  tex_circuits.lua  tex_math.lua
(+350 files in other folders)
