cabal-version:      2.4
name:               REPLACE_TO_PROJ
version:            0.1.0.1
license:            BSD-3-Clause
maintainer:         CompactHemrit@proton.me
author:             Compact Hermit
category:           Web
-- synopsis:

-- description:

extra-source-files:
  README.norg
--
library
  build-depends: --all Deps here
    , base >= 4.13.0.0 && <=4.99.0.0


  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns

  exposed-modules:

  default-extensions: -- Cabal extensions here
    

  hs-source-dirs:     src
  default-language:   Haskell2010
